# mem

./: .dockerignore  .env  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md
.beads/: config.yaml  metadata.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: feedback.md  health.md  help.md  mine.md  save.md  search.md  summary.md  wake-up.md
.claude-plugin/hooks/: claude_code_post_tool_use.sh  claude_code_post_tool_use_error.sh  claude_code_precompact.sh  claude_code_sessionstart.sh  claude_code_stop.sh  claude_code_user_prompt_submit.sh  hooks.json
.codex-plugin/: README.md  hooks.json  marketplace.json  plugin.json
.codex-plugin/hooks/: precompact.sh  session_start.sh  stop.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  lint.yml  release.yml
db/schema/: 001_init.sql  002_embeddings.sql  003_graph.sql  004_sessions.sql  005_fts.sql  006_conversation_messages.sql  008_entity_registry.sql
deploy/: docker-compose.yml  mem.config.env.example  mem.service  mem.supervisor.conf
docs/: CHANGES.MD  ROADMAP.MD  agent-memory-strategy-readiness.md  api-data-flow.md  architecture.md  backend-coupling.md  clickhouse-backend.md  database-schema.md  duckdb-read-path-strategy.md  evolution-worker.md  long-content-recall.md  mcp-capabilities.md  mempalace-diff-v2.md  mempalace-diff-v3.md  mempalace-diff-v4.md  mempalace-diff.md  offline-reranker-lane.md  oss-memory-diff.md  postgres-backend.md  remove-duckdb-keep-lance.md
examples/: hybrid_compose_vs_fused_bench.rs  hybrid_sql_poc.rs  ingest_bench.rs  lance_duckdb_poc.rs
hooks/: claude_code_precompact.sh  claude_code_stop.sh
integrations/mem-mcp/: README.md  package-lock.json  package.json  tsconfig.json
migrations/clickhouse/: 0001_capsule_store.sql  0002_embeddings.sql  0003_graph_transcript_jobs.sql  0004_registry_session_misc.sql
migrations/postgres/: 0001_capsule_store.sql  0002_embeddings.sql  0003_search.sql  0004_p5_tables.sql
packaging/npm/: .npmignore  README.md  install.js  package.json
packaging/pi/: README.md  mcp-client.test.ts  mcp-client.ts  mem-extension.ts  package.json  tsconfig.json
scripts/: download_model.py  install.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/cli/: common.rs  feedback.rs  heuristic_extract.rs  hook.rs  import.rs  init.rs  llm_extract.rs  mcp.rs  mine.rs  mod.rs  repair.rs  serve.rs  sync.rs  wake_up.rs
src/domain/: capability_capsule.rs  conversation_message.rs  edge_dynamics.rs  embeddings.rs  entity.rs  episode.rs  memory.rs  mod.rs  query.rs  session.rs  workflow.rs
src/embedding/: embed_anything.rs  fake.rs  instance.rs  mod.rs  openai.rs  provider.rs  wire.rs
src/evolution/: map.rs  mod.rs  synthesis.rs
src/http/: admin.rs  capability_capsule.rs  embeddings.rs  entities.rs  fact_check.rs  graph.rs  health.rs  logging.rs  maintenance.rs  memory.rs  metrics.rs  mine_cursors.rs  mod.rs  review.rs  transcripts.rs
src/mcp/: client.rs  config.rs  mod.rs  result.rs  server.rs
src/pipeline/: chunk.rs  compress.rs  entity_normalize.rs  eval_metrics.rs  ingest.rs  mod.rs  ranking.rs  redact.rs  retrieve.rs  session.rs  store_traits.rs  transcript_recall.rs  workflow.rs
src/rerank/: candle_qwen3.rs  fake.rs  mod.rs
src/service/: capability_capsule_service.rs  decay_worker.rs  embedding_helpers.rs  embedding_worker.rs  entity_service.rs  fact_check_service.rs  fts_worker.rs  memory_service.rs  mod.rs  transcript_embedding_worker.rs  transcript_service.rs
src/storage/: backend.rs  capsule_search_store.rs  capsule_store.rs  conn_pool.rs  duckdb.rs  duckdb_query.rs  embedding_job_store.rs  embedding_vector_store.rs  entity_registry.rs  entity_repo.rs  evolution_candidate_store.rs  fts.rs  graph.rs  graph_store.rs  maintenance_store.rs  mine_cursor_store.rs  mod.rs  open_lock.rs  postgres_backend.rs  postgres_capsule_store.rs  repository.rs  schema.rs  session_store.rs  store.rs  time.rs  transcript_repo.rs  transcript_store.rs  types.rs  vector_index.rs  vector_index_diagnose.rs
src/web/: app.js  index.html  style.css
src/worker/: auto_promote_worker.rs  cooccurrence_worker.rs  decay_worker.rs  dedup_worker.rs  embedding_worker.rs  evolution_worker.rs  fts_worker.rs  idle_archive_worker.rs  last_used_worker.rs  mod.rs  potentiation_worker.rs  topic_tunnel_worker.rs  transcript_embedding_worker.rs  vacuum_worker.rs
tests/: auto_promote.rs  bm25_search.rs  capsule_store_parity.rs  cli_mine.rs  cli_mine_archive.rs  cli_wake_up.rs  clickhouse_backend.rs  conn_pool.rs  conversation_archive.rs  decay_concurrency.rs  dedup.rs  embedding_jobs.rs  embedding_worker.rs  embeddings_api.rs  entity_registry.rs  evolution.rs  evolution_dynamics.rs  evolution_merge.rs  evolution_refine_split.rs  evolution_review.rs  evolution_workflow_generalize.rs  expiry.rs  fact_check.rs  feedback_cursor.rs  golden_recall.rs  graph_adapter.rs  graph_channel.rs  graph_kg_extensions.rs  graph_temporal.rs  health_api.rs  hybrid_search.rs  idle_archive.rs  ingest_api.rs  ingest_cap.rs  integration_claude_code.rs  lance_snapshot_visibility.rs  lance_version_visibility.rs  legacy_uint64_version_compat.rs  locomo_bench.rs  mempalace_bench.rs  (+24 more)
tests/bench/: fixture.rs  geometry.rs  judgment.rs  longmemeval.rs  longmemeval_dataset.rs  mod.rs  oracle.rs  real.rs  runner.rs  synthetic.rs
tests/common/: mod.rs
tests/golden/: anchor_session_candidates.json  ann.json  auto_promote_candidates.json  context_window_for_block.json  filter.json  find_by_idempotency_or_hash.json  fts.json  get_capability_capsule_for_tenant.json  get_conversation_messages_by_session.json  get_conversation_messages_by_session_paged.json  get_entity.json  get_pending.json  graph.json  graph_tunnel.json  hybrid.json  hybrid_compose.json  list_conversation_messages_in_range.json  list_entities.json  list_ids.json  list_in_scope.json  list_pending_review.json  list_transcript_sessions.json  list_wings.json  lookup_alias.json  recent_active.json  recent_conversation_messages.json  stats.json  (+5 more)
(+127 files in other folders)
