[package]
name = "mem"
version = "0.1.2"
edition = "2021"
default-run = "mem"

[lib]
doctest = false

[features]
default = []
# Phase 4 (backend-coupling §6.5) Postgres spike — opt-in. Adds sqlx
# + PostgresCapsuleStore behind `cargo build --features postgres`.
# Default build is unaffected; no sqlx pulled into the dep graph
# unless the feature is on. See `docs/backend-coupling.md` §6.5.
postgres = ["dep:sqlx"]

[dependencies]
# Optional: Phase 4 Postgres spike. Gated behind the `postgres`
# feature so the default build doesn't pull sqlx + libpq machinery.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"], optional = true }
# LanceDB is the storage backend (on-disk Lance datasets) and DuckDB
# is the SQL query engine on top via the `lance` core extension. Both
# are unconditional dependencies — there's only one storage path now.
lancedb = "0.29"
# arrow-array must be pinned to lancedb 0.27's transitive 57.x —
# otherwise cargo can resolve to 58.x for our direct dep, leaving two
# distinct `RecordBatch` types in the dep graph that fail to typecheck
# across the Table::add boundary. (lancedb re-exports `arrow_schema`
# via `lancedb::arrow::arrow_schema`, so we don't need a direct dep
# on that.)
arrow-array = "57"
# `futures::TryStreamExt::try_collect` collapses LanceDB's
# `SendableRecordBatchStream` into a `Vec<RecordBatch>`. lancedb
# already pulls futures transitively, but cargo doesn't expose
# transitive deps as importable, so we need a direct dep here too.
futures = "0.3"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
# duckdb is the SQL query engine: in-process Connection with the
# `lance` core extension loaded, ATTACHing the on-disk lance datasets
# under namespace `ns`. No DuckDB tables of our own; all storage is in
# Lance. The `bundled` feature compiles the duckdb library statically
# so we don't need a system-wide install.
duckdb = { version = "1", features = ["bundled"] }
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
schemars = "1.2"
embed_anything = { git = "https://github.com/StarlightSearch/EmbedAnything" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
once_cell = "1"
tiktoken-rs = "0.11"
uuid = { version = "1", features = ["v5", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rust-embed = { version = "8", features = ["debug-embed"] }
# Cross-platform advisory file lock used by `Store::open` to refuse a
# second `mem` process opening the same DB dir concurrently. mem is
# single-writer by design (CLAUDE.md "Architecture" §1); the lock turns
# that documented contract into a runtime guard. fs4 was already in the
# tree transitively (via lancedb's storage layer); promoting it to a
# direct dep so we can import it.
fs4 = "0.8"

[dev-dependencies]
rand = "0.8"

# PoC: probe the Lance DuckDB extension's row-level DML capabilities
# and Rust-write→DuckDB-read visibility model. Run with:
#   cargo run --example lance_duckdb_poc
# Requires network at first run (community extension download).
[[example]]
name = "lance_duckdb_poc"

# PoC: cross-table hybrid search (lance_fts + lance_vector_search joined
# on capability_capsule_id, with RRF computed in DuckDB SQL). Validates
# the no-schema-change route to native hybrid retrieval. Run with:
#   cargo run --example hybrid_sql_poc
[[example]]
name = "hybrid_sql_poc"
