[package]
name = "mem"
version = "0.1.9"
edition = "2021"
default-run = "mem"

[lib]
doctest = false

[dependencies]
# Postgres backend (backend-coupling §6.5). A default dependency: the
# `postgres`/`clickhouse` backends are always compiled in and selected at
# runtime via `MEM_BACKEND` + `MEM_POSTGRES_URL`/`MEM_CLICKHOUSE_URL`, so
# there is no longer a cargo feature gating them. sqlx + libpq machinery is
# always in the dep graph.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
# ClickHouse backend — default dependency (see the sqlx note above). Pulls the
# clickhouse-rs HTTP client + lz4 into every build.
clickhouse = { version = "0.15", default-features = false, features = ["lz4"] }
# pgvector binding for the Postgres EmbeddingVectorStore. `pgvector::Vector`
# implements sqlx Encode/Decode for the PG `vector` type.
pgvector = { version = "0.4", default-features = false, features = ["sqlx"] }
# LanceDB is the storage backend (on-disk Lance datasets) for both
# reads and writes — reads go through the lancedb Rust API natively
# (read_consistency_interval(0)). Single, unconditional storage path.
lancedb = "0.30"
# arrow-array must track lancedb's transitive arrow major — lancedb 0.30
# is on 58.x, so our direct dep has to be 58 too. Otherwise cargo keeps
# a second `arrow-array` 57.x in the graph for our dep, leaving two
# distinct `RecordBatch` types that fail to typecheck across the
# `Table::add` boundary. (lancedb re-exports `arrow_schema` via
# `lancedb::arrow::arrow_schema`, so we don't need a direct dep on that.)
arrow-array = "58"
# `futures::TryStreamExt::try_collect` collapses LanceDB's
# `SendableRecordBatchStream` into a `Vec<RecordBatch>`. lancedb
# already pulls futures transitively, but cargo doesn't expose
# transitive deps as importable, so we need a direct dep here too.
futures = "0.3"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
schemars = "1.2"
embed_anything = { git = "https://github.com/StarlightSearch/EmbedAnything" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
once_cell = "1"
tiktoken-rs = "0.11"
uuid = { version = "1", features = ["v5", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rust-embed = { version = "8", features = ["debug-embed"] }
# Cross-platform advisory file lock used by `Store::open` to refuse a
# second `mem` process opening the same DB dir concurrently. mem is
# single-writer by design (CLAUDE.md "Architecture" §1); the lock turns
# that documented contract into a runtime guard. fs4 was already in the
# tree transitively (via lancedb's storage layer); promoting it to a
# direct dep so we can import it.
fs4 = "0.8"
# jemalloc as the Rust global allocator. glibc's per-thread arenas ratcheted
# RSS on this 96-core box (5→8GB over days) and never returned freed memory to
# the OS even capped with MALLOC_ARENA_MAX. jemalloc's decay + background_thread
# return idle memory aggressively (local A/B: ~94% returned on idle). Governs
# all Rust-side allocs (embedding inference via Candle/gemm is the dominant
# churn).
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"
# Tantivy is the route-B full-text (BM25) subsystem (replaced the old
# DuckDB `lance_fts` path; see `docs/remove-duckdb-keep-lance.md` §4).
# A pure-Rust embedded inverted index — no external service, fits the
# local-first single-binary constraint. `tantivy-jieba` is the Chinese
# segmenter (jieba precision mode) registered on the `content` field;
# `jieba-rs` is pulled directly so the query layer can term-split CJK
# runs into BM25 terms (Tantivy's QueryParser treats an unspaced CJK
# run as a phrase query → 0 hits, so the query MUST be tokenized into a
# should/OR boolean of terms — see `FtsIndex::bm25`).
tantivy = "0.26"
tantivy-jieba = "0.20"
jieba-rs = "0.9"

[dev-dependencies]
rand = "0.10"
